# behavioral-circuits-viz

./: .env.example  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: tests.yml
configs/: experiment_hallucination.yaml  experiment_refusal.yaml  model_gpt2_small.yaml  model_pythia_1.4b.yaml
data/: README.md
data/pairs/: hallucination_pairs.jsonl  refusal_dataset_test.jsonl  refusal_pairs.jsonl  refusal_pairs_2.jsonl
experiments/: 01_baseline_probes.py  02_activation_patching.py  03_ablation_study.py  04_generalization.py  05_behavior_flow_map.py  run_experiment.py
paper/: bibliography.bib  main.tex
src/causal/: ablation.py  activation_patching.py  causal_scorer.py
src/config/: config.py
src/data/: dataset_builder.py  dataset_builder_2.py  dataset_loader.py  prompt_generator.py  tokenizer_utils.py
src/model/: activation_extractor.py  cache_manager.py  loader.py
src/probes/: evaluate_probe.py  probe_registry.py  train_probe.py
src/tool/: app.py  state.py
src/visualization/: attention_overlay.py  causal_markers.py  flow_map.py  mlp_overlay.py  plot_utils.py
tests/: test_activation_extractor.py  test_causal.py  test_dataset_builder.py  test_probes.py
