[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "behavioral-circuits-viz"
version = "0.1.0"
description = "Causal Visualization of Behavioral Circuits in Language Models"
requires-python = ">=3.10"
dependencies = [
    "transformer_lens>=1.19.0",
    "torch>=2.11.0",
    "transformers==4.57.6",
    "scikit-learn>=1.4.0",
    "plotly>=5.20.0",
    "matplotlib>=3.8.0",
    "streamlit>=1.32.0",
    "pandas>=2.2.0",
    "numpy>=1.26,<3.0",
    "pyyaml>=6.0",
    "tqdm>=4.66.0",
    "einops>=0.7.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
